# spotify-player

./: .dir-locals.el  .dockerignore  .gitignore  .typos.toml  CLAUDE.md  Cargo.toml  Cross.toml  Dockerfile  LICENSE  NOTES.md  README.md  THEMES.md  checklist.md  default.nix  flake.nix  phase2_plan.md  plan.md  playlist_generator.tcl  playlist_scraper.tcl  pr-description.md  shell.nix  test_local.sh
.github/: copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/ISSUE_TEMPLATES/: bug_report.md  enhancement.md
.github/issue_templates/: bug.md
.github/workflows/: audit-on-push.yml  cd.yml  ci.yml  deploy.yml  docker.yml  general.yml  nix.yml  weekly-playlist-update-2.yml  weekly-playlist-update.yml
Formula/: SpotifyPlayer.rb  spotify_player.rb
ci/: Dockerfile-cross
debugging/: Cargo.toml  lateral-api-response.json
debugging/src/: main.rs
doc/: config.html  config.md
docs/: config.md
examples/: README.md  app.toml  theme.toml
local_player/: Cargo.toml
local_player/src/: main.rs
lyric_finder/: Cargo.toml
lyric_finder/examples/: lyric-finder.rs
lyric_finder/src/: lib.rs
scripts/: publish  theme_parse
spotify_player/: Cargo.toml
spotify_player/src/: auth.rs  cli.rs  client.rs  command.rs  config.rs  connect.rs  event.rs  key.rs  log_layer.rs  main.rs  media_control.rs  player.rs  playlist_folders.rs  prelude.rs  rustfmt.toml  spirc.rs  state.rs  streaming.rs  streaming_vis.rs  token.rs  ui.rs  utils.rs
spotify_player/src/cli/: client.rs  commands.rs  handlers.rs  mod.rs  socket.rs
spotify_player/src/client/: handlers.rs  mod.rs  request.rs  spotify.rs
spotify_player/src/config/: keymap.rs  mod.rs  theme.rs
spotify_player/src/event/: clipboard.rs  item.rs  mod.rs  page.rs  popup.rs  window.rs
spotify_player/src/state/: consant.rs  constant.rs  data.rs  mod.rs  model.rs  player.rs  queue.rs  ui.rs
spotify_player/src/state/ui/: mod.rs  page.rs  popup.rs
spotify_player/src/ui/: context.rs  cover_image.rs  help.rs  mod.rs  page.rs  playback.rs  popup.rs  search.rs  single_line_input.rs  streaming.rs  utils.rs  window.rs
