[package]
name = "lyric_finder"
version = "0.1.7"
edition = "2021"
license = "MIT"
description = "A lyric finder library"
authors = ["Thang Pham <phamducthang1234@gmail.com>"]
repository = "https://github.com/aome510/spotify-player/tree/master/lyric_finder"
keywords = ["lyric", "song", "track"]

[features]
default = ["rustls-tls"]
rustls-tls = ["reqwest/rustls-tls"]
native-tls = ["reqwest/native-tls"]

[dependencies]
reqwest = { version = "0.12.4", features = ["json"], default-features = false }
anyhow = "1.0.86"
serde = { version = "1.0.202", features = ["derive"] }
html5ever = "0.27.0"
markup5ever_rcdom = "0.3.0"
log = "0.4.21"

[dev-dependencies]
tokio = { version = "1.37.0", features = ["rt", "rt-multi-thread", "macros"] }
env_logger = { version = "0.11.3", default-features = false }

[[example]]
name = "lyric-finder"
path = "examples/lyric-finder.rs"
