[package]
name = "spotify_player"
version = "0.20.5"
authors = ["Thang Pham <phamducthang1234@gmail.com>"]
edition = "2021"
license = "MIT"
description = "A Spotify player in the terminal with full feature parity"
repository = "https://github.com/aome510/spotify-player"
keywords = ["spotify", "tui", "ratatui", "player"]
readme = "../README.md"

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.37", features = ["derive", "string"] }
config_parser2 = "0.1.5"
crossterm = "0.29.0"
dirs-next = "2.0.0"
librespot-connect = { version = "0.6.0", optional = true }
librespot-core = "0.6.0"
librespot-oauth = "0.6.0"
librespot-playback = { version = "0.6.0", optional = true }
librespot-metadata = "0.6.0"
log = "0.4.27"
chrono = "0.4.41"
reqwest = { version = "0.12.15", features = ["json"] }
rspotify = "0.14.0"
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.45.0", features = [
	"rt",
	"rt-multi-thread",
	"macros",
	"time",
] }
toml = "0.8.22"
ratatui = { version = "0.29.0" }
rand = "0.9.1"
maybe-async = "0.2.10"
async-trait = "0.1.88"
parking_lot = "0.12.3"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
backtrace = "0.3.75"
souvlaki = { version = "0.8.2", optional = true }
viuer = { version = "0.9.1", optional = true }
image = { version = "0.25.6", optional = true }
notify-rust = { version = "4.11.7", optional = true, default-features = false, features = [
	"d",
] }
flume = "0.11.1"
serde_json = "1.0.140"
regex = "1.11.1"
daemonize = { version = "0.5.0", optional = true }
ttl_cache = "0.5.1"
clap_complete = "4.5.50"
which = "7.0.3"
fuzzy-matcher = { version = "0.3.7", optional = true }
html-escape = "0.2.13"
rustls = { version = "0.23.27", default-features = false, features = ["ring"] }
unicode-bidi = "0.3.18"

[target.'cfg(any(target_os = "windows", target_os = "macos"))'.dependencies.winit]
version = "0.30.10"
optional = true

[target.'cfg(target_os = "windows")'.dependencies]
clipboard-win = "5.4.0"

[target.'cfg(target_os = "windows")'.dependencies.windows]
version = "0.58.0"
features = [
	"Win32_Foundation",
	"Win32_Graphics_Gdi",
	"Win32_System_LibraryLoader",
	"Win32_UI_WindowsAndMessaging",
]
optional = true

[features]
alsa-backend = ["streaming", "librespot-playback/alsa-backend"]
pulseaudio-backend = ["streaming", "librespot-playback/pulseaudio-backend"]
rodio-backend = ["streaming", "librespot-playback/rodio-backend"]
portaudio-backend = ["streaming", "librespot-playback/portaudio-backend"]
jackaudio-backend = ["streaming", "librespot-playback/jackaudio-backend"]
rodiojack-backend = ["streaming", "librespot-playback/rodiojack-backend"]
sdl-backend = ["streaming", "librespot-playback/sdl-backend"]
gstreamer-backend = ["streaming", "librespot-playback/gstreamer-backend"]
streaming = ["librespot-playback", "librespot-connect"]
media-control = ["souvlaki", "winit", "windows"]
image = ["viuer", "dep:image"]
sixel = ["image", "viuer/sixel"]
notify = ["notify-rust"]
daemon = ["daemonize", "streaming"]
fzf = ["fuzzy-matcher"]

default = ["rodio-backend", "media-control"]

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/{ name }_{ target }{ archive-suffix }"

[lints]
workspace = true

[package.metadata.cargo-machete]
ignored = ["async-trait"]
