[package]
name = "spotify_player"
version = "0.21.2"
authors = ["Thang Pham <phamducthang1234@gmail.com>"]
edition = "2021"
license = "MIT"
description = "A Spotify player in the terminal with full feature parity"
repository = "https://github.com/aome510/spotify-player"
keywords = ["spotify", "tui", "ratatui", "player"]
readme = "../README.md"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.51", features = ["derive", "string"] }
config_parser2 = "0.1.6"
crossterm = "0.29.0"
dirs-next = "2.0.0"
librespot-connect = { version = "0.8.0", optional = true }
librespot-core = { version = "0.8.0" }
librespot-oauth = { version = "0.8.0" }
librespot-playback = {version = "0.8.0", optional = true, default-features = false, features = ["native-tls"]}
librespot-metadata = { version = "0.8.0" }
log = "0.4.28"
chrono = "0.4.42"
chrono-humanize = "0.2.3"
reqwest = { version = "0.12.24", features = ["json"] }
rspotify = {version = "0.15.3", features = ["cli"] }
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.48.0", features = [
	"rt",
	"rt-multi-thread",
	"macros",
	"time",
] }
toml = "0.9.8"
ratatui = { version = "0.29.0" }
rand = "0.9.2"
maybe-async = "0.2.10"
async-trait = "0.1.89"
parking_lot = "0.12.5"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
backtrace = "0.3.76"
souvlaki = { version = "0.8.3", optional = true }
viuer = { version = "0.9.2", optional = true }
image = { version = "0.25.8", optional = true }
notify-rust = { version = "4.11.7", optional = true, default-features = false, features = [
	"d",
] }
flume = "0.11.1"
serde_json = "1.0.145"
regex = "1.12.2"
daemonize = { version = "0.5.0", optional = true }
ttl_cache = "0.5.1"
clap_complete = "4.5.60"
which = "8.0.0"
fuzzy-matcher = { version = "0.3.7", optional = true }
html-escape = "0.2.13"
rustls = { version = "0.23.35", default-features = false, features = ["ring"] }
unicode-bidi = "0.3.18"

[target.'cfg(any(target_os = "windows", target_os = "macos"))'.dependencies.winit]
version = "0.30.12"
optional = true

[target.'cfg(target_os = "windows")'.dependencies]
clipboard-win = "5.4.1"

[target.'cfg(target_os = "windows")'.dependencies.windows]
version = "0.58.0"
features = [
	"Win32_Foundation",
	"Win32_Graphics_Gdi",
	"Win32_System_LibraryLoader",
	"Win32_UI_WindowsAndMessaging",
]
optional = true

[features]
alsa-backend = ["streaming", "librespot-playback/alsa-backend"]
pulseaudio-backend = ["streaming", "librespot-playback/pulseaudio-backend"]
rodio-backend = ["streaming", "librespot-playback/rodio-backend"]
portaudio-backend = ["streaming", "librespot-playback/portaudio-backend"]
jackaudio-backend = ["streaming", "librespot-playback/jackaudio-backend"]
rodiojack-backend = ["streaming", "librespot-playback/rodiojack-backend"]
sdl-backend = ["streaming", "librespot-playback/sdl-backend"]
gstreamer-backend = ["streaming", "librespot-playback/gstreamer-backend"]
streaming = ["librespot-playback", "librespot-connect"]
media-control = ["souvlaki", "winit", "windows"]
image = ["viuer", "dep:image"]
sixel = ["image", "viuer/sixel"]
pixelate = ["image"]
notify = ["notify-rust"]
daemon = ["daemonize", "streaming"]
fzf = ["fuzzy-matcher"]

default = ["rodio-backend", "media-control"]

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/{ name }_{ target }{ archive-suffix }"

[lints]
workspace = true

[package.metadata.cargo-machete]
ignored = ["async-trait"]
